Add new 'Class' column into post-auth / SQL schemas

--- a/raddb/mods-config/sql/main/cassandra/queries.conf
+++ b/raddb/mods-config/sql/main/cassandra/queries.conf
@@ -365,10 +365,11 @@ post-auth {
 
 	query =	"\
 		INSERT INTO ${..postauth_table} \
-			(username, pass, reply, authdate) \
+			(username, pass, reply, authdate, class) \
 		VALUES ( \
 			'%{SQL-User-Name}', \
 			'%{%{User-Password}:-%{Chap-Password}}', \
 			'%{reply.Packet-Type}', \
-			'%{expr:%l * 1000 + %M / 1000}')"
+			'%{expr:%l * 1000 + %M / 1000}', \
+			'%{reply.Class}')"
 }
