--- a/raddb/mods-config/sql/main/mssql/queries.conf
+++ b/raddb/mods-config/sql/main/mssql/queries.conf
@@ -366,10 +366,11 @@ post-auth {
 
 	query = "\
 		INSERT INTO ${..postauth_table} \
-			(userName, pass, reply, authdate) \
+			(userName, pass, reply, authdate, class) \
 		VALUES(\
 			'%{User-Name}', \
 			'%{%{User-Password}:-CHAP-PASSWORD}', \
 			'%{reply.Packet-Type}', \
-			'%S.%{expr:%M / 1000}')"
+			'%S.%{expr:%M / 1000}', \
+			'%{reply.Class}')"
 }
