--- a/raddb/mods-config/sql/main/oracle/queries.conf
+++ b/raddb/mods-config/sql/main/oracle/queries.conf
@@ -419,10 +419,11 @@ post-auth {
 #	logfile = ${logdir}/post-auth.sql
 	query = "\
 		INSERT INTO ${..postauth_table} \
-			(username, pass, reply, authdate) \
+			(username, pass, reply, authdate, class) \
 		VALUES (\
 			'%{User-Name}', \
 			'%{%{User-Password}:-%{Chap-Password}}', \
 			'%{reply.Packet-Type}', \
-			TO_TIMESTAMP('%S.%M','YYYY-MM-DDHH24:MI:SS.FF'))"
+			TO_TIMESTAMP('%S.%M','YYYY-MM-DDHH24:MI:SS.FF'), \
+			'%{reply.Class}')"
 }
