--- a/raddb/mods-config/sql/main/postgresql/queries.conf
+++ b/raddb/mods-config/sql/main/postgresql/queries.conf
@@ -469,10 +469,11 @@ post-auth {
 
 	query = "\
 		INSERT INTO ${..postauth_table} \
-			(username, pass, reply, authdate) \
+			(username, pass, reply, authdate, class) \
 		VALUES(\
 			'%{User-Name}', \
 			'%{%{User-Password}:-Chap-Password}', \
 			'%{reply.Packet-Type}', \
-			'%S.%M')"
+			'%S.%M', \
+			'%{reply.Class}')"
 }
