--- a/raddb/mods-config/sql/main/sqlite/queries.conf
+++ b/raddb/mods-config/sql/main/sqlite/queries.conf
@@ -412,10 +412,11 @@ post-auth {
 
 	query =	"\
 		INSERT INTO ${..postauth_table} \
-			(username, pass, reply, authdate) \
+			(username, pass, reply, authdate, class) \
 		VALUES ( \
 			'%{SQL-User-Name}', \
 			'%{%{User-Password}:-%{Chap-Password}}', \
 			'%{reply.Packet-Type}', \
-			'%S.%M')"
+			'%S.%M', \
+			'%{reply.Class}')"
 }
