tests: eapol_test needs libnl

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,8 @@ jobs:
         libldap2-dev \
         libmemcached-dev \
         libmysqlclient-dev \
+        libnl-3-dev \
+        libnl-genl-3-dev \
         libpam0g-dev \
         libpcap-dev \
         libpcre3-dev \
