Produce better errors when we can't resolve attributes
Be more strict about only resolving attributes in the dictionary associated with the current virtual server

--- a/src/tests/keywords/policy.conf
+++ b/src/tests/keywords/policy.conf
@@ -59,7 +59,7 @@ success {
 		}
 	}
 
-	if (&parent.request.User-Name && !&parent.reply.Result-Status) {
+	if (&parent.request && !&parent.reply.Result-Status) {
 		update parent.reply {
 			&Result-Status := "success"
 		}
@@ -73,7 +73,7 @@ test_fail {
 		&Result-Status += "Failure in test at line %(interpreter:...line)"
 	}
 
-	if (&parent.request.User-Name) {
+	if (&parent.request) {
 		update parent.reply {
 			&Result-Status += "Failure in test at line %(interpreter:...line)"
 		}
