--- a/scripts/docker/ubuntu16/Dockerfile
+++ b/scripts/docker/ubuntu16/Dockerfile
@@ -1,6 +1,8 @@
 ARG from=ubuntu:16.04
 FROM ${from} as build
 
+ARG DEBIAN_FRONTEND=noninteractive
+
 #
 #  Install build tools
 #
@@ -43,7 +45,9 @@ FROM ${from}
 COPY --from=build /usr/local/src/repositories/*.deb /tmp/
 
 RUN apt-get update \
-    && apt-get install -y /tmp/*.deb \
+    && apt-get install -y \
+               /tmp/*.deb \
+               libsasl2-modules-gssapi-mit \
     && apt-get clean \
     && rm -r /var/lib/apt/lists/* /tmp/*.deb \
     \
