look in both radiusd and eapol_test for TLS1.3 support
eapol_test always contains the tls_disable_tlsv1_3 string, even if
it's not actually built against an openssl version that supports it

--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -25,6 +25,17 @@ ifneq "(findstring eap,$(MAKECMDGOALS))" ""
 $(BUILD_PATH)/tests/eapol_test:
 	@mkdir -p $@
 
+TEST_PATH := $(top_builddir)/src/tests
+DICT_PATH := $(TEST_PATH)
+BIN_PATH := $(BUILD_PATH)/bin/local
+RADIUSD_BIN := $(BIN_PATH)/radiusd
+
+ifeq "$(DICT_PATH)" "$(TEST_PATH)"
+LIB_PATH := $(BUILD_PATH)/lib/local/.libs/
+DYLD_LIBRARY_PATH := $(DYLD_LIBRARY_PATH):$(LIB_PATH)
+export DYLD_LIBRARY_PATH
+endif
+
 ifneq "$(OPENSSL_LIBS)" ""
 #
 #  Build eapol_test, and cache its output.  Note that EAPOL_TEST may not be
@@ -39,7 +50,8 @@ endif
 
 $(BUILD_PATH)/tests/eapol_test/eapol_test.mk: | $(BUILD_PATH)/tests/eapol_test
 	@echo "EAPOL_TEST=" $(EAPOL_TEST_BIN) > $@
-	@echo "TLS1_3=" $(shell strings "$(EAPOL_TEST_BIN)" | grep 'tlsv1_3' | head -n 1) >> $@
+	@echo "TLS1_3=" $(shell strings "$(RADIUSD_BIN)" | grep -q '^tls13_enable$$' && \
+		strings "$(EAPOL_TEST_BIN)" | grep 'tlsv1_3' | head -n 1) >> $@
 	@echo "OPENSSL_OK=" $(shell openssl version | grep -v ' 1\.0') >> $@
 else
 #
@@ -51,17 +63,6 @@ $(BUILD_PATH)/tests/eapol_test/eapol_test.mk: | $(BUILD_PATH)/tests/eapol_test
 endif
 
 -include $(BUILD_PATH)/tests/eapol_test/eapol_test.mk
-endif
-
-TEST_PATH := $(top_builddir)/src/tests
-DICT_PATH := $(TEST_PATH)
-BIN_PATH := $(BUILD_PATH)/bin/local
-RADIUSD_BIN := $(BIN_PATH)/radiusd
-
-ifeq "$(DICT_PATH)" "$(TEST_PATH)"
-LIB_PATH := $(BUILD_PATH)/lib/local/.libs/
-DYLD_LIBRARY_PATH := $(DYLD_LIBRARY_PATH):$(LIB_PATH)
-export DYLD_LIBRARY_PATH
 endif
 
 #
