Add tests for %(date: ) xlat

--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -38,6 +38,21 @@ modules {
 
 	}
 
+	date {
+		format = "%a %d %b %H:%M:%S %Z %Y"
+		utc = yes
+	}
+
+	date localdate {
+		format = "%Y-%m-%d %H:%M:%S"
+		utc = no
+	}
+
+	date sqldate {
+		format = "%Y-%m-%d %H:%M:%S"
+		utc = yes
+	}
+
 }
 
 policy {
