Add tests for %(mschap: ) xlat

--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -51,12 +51,17 @@ modules {
 	date sqldate {
 		format = "%Y-%m-%d %H:%M:%S"
 		utc = yes
-  }
+  	}
   
 	idn {
 		allow_unassigned = no
 		use_std3_ascii_rules = yes
 	}
+
+	mschap {
+
+	}
+
 }
 
 policy {
