v4: Convert %(date: ) to new xlat API (#4080)
* Convert %(date: ) to new xlat API

* Add tests for %(date: ) xlat

* Amend docs to match new %(date: ) syntax

Co-authored-by: Arran Cudbard-Bell <a.cudbardb@gmail.com>

--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -38,11 +38,25 @@ modules {
 
 	}
 
+	date {
+		format = "%a %d %b %H:%M:%S %Z %Y"
+		utc = yes
+	}
+
+	date localdate {
+		format = "%Y-%m-%d %H:%M:%S"
+		utc = no
+	}
+
+	date sqldate {
+		format = "%Y-%m-%d %H:%M:%S"
+		utc = yes
+  }
+  
 	idn {
 		allow_unassigned = no
 		use_std3_ascii_rules = yes
 	}
-
 }
 
 policy {
