--- a/raddb/mods-config/sql/main/sqlite/queries.conf
+++ b/raddb/mods-config/sql/main/sqlite/queries.conf
@@ -42,8 +42,10 @@ sql_user_name = "%{User-Name}"
 #
 class {
 	#
-	#  Delete the '#' from all of the next 3 lines in order to
-	#  put the Class attribute into the various tables.
+	#  Delete the '#' character from each of the next 3 lines in
+	#  order to put the Class attribute into the various tables.
+	#  Leave the double-quoted string there, as the value for
+	#  the configuration item.
 	#
 	#  See also policy.d/accounting, and the "insert_acct_class"
 	#  policy.  You will need to list (or uncomment)
