--- a/raddb/mods-config/sql/main/sqlite/queries.conf
+++ b/raddb/mods-config/sql/main/sqlite/queries.conf
@@ -42,19 +42,19 @@ sql_user_name = "%{User-Name}"
 #
 class {
 	#
-	#  Delete the '#' character from each of the next 3 lines in
-	#  order to put the Class attribute into the various tables.
-	#  Leave the double-quoted string there, as the value for
-	#  the configuration item.
+	#  Delete the '#' character from each of the configuration
+	#  items in this section.  This change puts the Class
+	#  attribute into the various tables.  Leave the double-quoted
+	#  string there, as the value for the configuration item.
 	#
 	#  See also policy.d/accounting, and the "insert_acct_class"
 	#  policy.  You will need to list (or uncomment)
 	#  "insert_acct_class" in the "post-auth" section in order to
 	#  create a Class attribute.
 	#
-	column_name =  # ", class"
-	packet_xlat =  # ", '%{Class}'"
-	reply_xlat =   # ", '%{Reply:Class}'"
+	column_name =	# ", class"
+	packet_xlat =	# ", '%{Class}'"
+	reply_xlat =	# ", '%{Reply:Class}'"
 }
 
 #######################################################################
@@ -329,7 +329,8 @@ accounting {
 				'', \
 				'', \
 				'', \
-				'')"
+				'' \
+				${....class.reply_xlat})"
 
 			query = "\
 				UPDATE ${....acct_table1} SET \
