move to better location

--- a/raddb/mods-config/sql/main/sqlite/queries.conf
+++ b/raddb/mods-config/sql/main/sqlite/queries.conf
@@ -26,6 +26,33 @@
 #
 sql_user_name = "%{User-Name}"
 
+#######################################################################
+#  Query config:  Event-Timestamp
+#######################################################################
+# event_timestamp_epoch is the basis for the time inserted into
+# accounting records. Typically this will be the Event-Timestamp of the
+# accounting request, which is usually provided by a NAS.
+#
+# Uncomment the next line, if you want the timestamp to be based on the
+# request reception time recorded by this server, for example if you
+# distrust the provided Event-Timestamp.
+#event_timestamp_epoch = "%l"
+
+event_timestamp_epoch = "%{%{integer:Event-Timestamp}:-%l}"
+
+# event_timestamp is the SQL snippet for converting an epoch timestamp
+# to an SQL date.
+
+event_timestamp = "${event_timestamp_epoch}"
+
+# NOTE: Recent SQLite versions allow proper arithmetic with dates
+# stored as strings including comparison using an index, so we keep
+# these variables differentiated in preparation for switching away from
+# integer storage.
+
+#######################################################################
+#  Query config:  Class attribute
+#######################################################################
 #
 #  3.0.22 and later have a "class" column in the accounting table.
 #
@@ -56,30 +83,6 @@ class {
 	packet_xlat =	# ", '%{Class}'"
 	reply_xlat =	# ", '%{Reply:Class}'"
 }
-
-#######################################################################
-#  Query config:  Event-Timestamp
-#######################################################################
-# event_timestamp_epoch is the basis for the time inserted into
-# accounting records. Typically this will be the Event-Timestamp of the
-# accounting request, which is usually provided by a NAS.
-#
-# Uncomment the next line, if you want the timestamp to be based on the
-# request reception time recorded by this server, for example if you
-# distrust the provided Event-Timestamp.
-#event_timestamp_epoch = "%l"
-
-event_timestamp_epoch = "%{%{integer:Event-Timestamp}:-%l}"
-
-# event_timestamp is the SQL snippet for converting an epoch timestamp
-# to an SQL date.
-
-event_timestamp = "${event_timestamp_epoch}"
-
-# NOTE: Recent SQLite versions allow proper arithmetic with dates
-# stored as strings including comparison using an index, so we keep
-# these variables differentiated in preparation for switching away from
-# integer storage.
 
 #######################################################################
 # Default profile
