update PostgreSQL for Class queries

--- a/raddb/mods-config/sql/main/postgresql/queries.conf
+++ b/raddb/mods-config/sql/main/postgresql/queries.conf
@@ -59,6 +59,40 @@ event_timestamp_epoch = "%{%{integer:Event-Timestamp}:-%l}"
 event_timestamp = "TO_TIMESTAMP(${event_timestamp_epoch})"
 
 #######################################################################
+#  Query config:  Class attribute
+#######################################################################
+#
+#  3.0.22 and later have a "class" column in the accounting table.
+#
+#  However, we do NOT want to break existing configurations by adding
+#  the Class attribute to the default queries.  If we did that, then
+#  systems using newer versions of the server would fail, because
+#  there is no "class" column in their accounting tables.
+#
+#  The solution to that is the following "class" subsection.  If your
+#  database has a "class" column for the various tables, then you can
+#  uncomment the configuration items here.  The queries below will
+#  then automatically insert the Class attribute into radacct,
+#  radpostauth, etc.
+#
+class {
+	#
+	#  Delete the '#' character from each of the configuration
+	#  items in this section.  This change puts the Class
+	#  attribute into the various tables.  Leave the double-quoted
+	#  string there, as the value for the configuration item.
+	#
+	#  See also policy.d/accounting, and the "insert_acct_class"
+	#  policy.  You will need to list (or uncomment)
+	#  "insert_acct_class" in the "post-auth" section in order to
+	#  create a Class attribute.
+	#
+	column_name =	# ", Class"
+	packet_xlat =	# ", '%{Class}'"
+	reply_xlat =	# ", '%{Reply:Class}'"
+}
+
+#######################################################################
 #  Default profile
 #######################################################################
 # This is the default profile. It is found in SQL by group membership.
@@ -276,7 +310,8 @@ accounting {
 		FramedIpv6Address, \
 		FramedIpv6Prefix, \
 		FramedInterfaceId, \
-		DelegatedIpv6Prefix"
+		DelegatedIpv6Prefix \
+		${..class.column_name}"
 
 	type {
 		accounting-on {
@@ -333,7 +368,8 @@ accounting {
 					NULL, \
 					NULL, \
 					NULL, \
-					NULL)"
+					NULL \
+					${....class.reply_xlat})"
 
 			query = "\
 				UPDATE ${....acct_table1} \
@@ -376,7 +412,8 @@ accounting {
 					NULLIF('%{Framed-IPv6-Address}', '')::inet, \
 					NULLIF('%{Framed-IPv6-Prefix}', '')::inet, \
 					NULLIF('%{Framed-Interface-Id}', ''), \
-					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet) \
+					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet \
+					${....class.packet_xlat} ) \
 				ON CONFLICT (AcctUniqueId) \
 				DO UPDATE \
 				SET \
@@ -474,7 +511,8 @@ accounting {
 					NULLIF('%{Framed-IPv6-Address}', '')::inet, \
 					NULLIF('%{Framed-IPv6-Prefix}', '')::inet, \
 					NULLIF('%{Framed-Interface-Id}', ''), \
-					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet) \
+					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet \
+					${....class.packet_xlat}) \
 				ON CONFLICT (AcctUniqueId) \
 				DO NOTHING"
 
@@ -565,7 +603,8 @@ accounting {
 					NULLIF('%{Framed-IPv6-Address}', '')::inet, \
 					NULLIF('%{Framed-IPv6-Prefix}', '')::inet, \
 					NULLIF('%{Framed-Interface-Id}', ''), \
-					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet) \
+					NULLIF('%{Delegated-IPv6-Prefix}', '')::inet \
+					${....class.packet_xlat}) \
 				ON CONFLICT (AcctUniqueId) \
 				DO NOTHING"
 
@@ -650,10 +689,11 @@ post-auth {
 
 	query = "\
 		INSERT INTO ${..postauth_table} \
-			(username, pass, reply, authdate) \
+			(username, pass, reply, authdate ${..class.column_name}) \
 		VALUES(\
 			'%{User-Name}', \
 			'%{%{User-Password}:-%{Chap-Password}}', \
 			'%{reply:Packet-Type}', \
-			'%S.%M')"
+			'%S.%M' \
+			${..class.reply_xlat})"
 }
